--- a/images/style.css
+++ b/images/style.css
@@ -1,15 +1,12 @@
-body{
-   background-color: black;
-}
 
 
 
 #canvas1{
-    border: 5px solid black;
+   border: 2px solid black;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform:translate(-50%, -50%);
-    height: 600px;
-    width: 600px;
+    top: 0;
+    left: 0;
+    height: 100%;;
+    width: 100%;
 }
+
