--- a/images/style.css
+++ b/images/style.css
@@ -3,10 +3,11 @@
 
 #canvas1{
    border: 2px solid black;
+   background: green;
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;;
+    height: 100%;
     width: 100%;
 }
 
