--- a/images/style.css
+++ b/images/style.css
@@ -1,5 +1,6 @@
 body{
     background: blue;
+ 
 }
 
 
@@ -7,11 +8,12 @@ body{
    border: 2px solid black;
    background: url('/images/Grass_01.png');
     position: absolute;
-    top: 60%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 400px;
-    width: 1000px;
+   max-width: 100%;
+   max-height: 100%;
+    margin-top: 5%;
 }
 
 #score-container{
@@ -79,3 +81,44 @@ body{
     margin-top: 20px;
   }
 
+  .direction-btn-container{
+    display:flex;
+    align-content:center;
+    justify-content: center;
+  }
+
+  #up{
+    display:none;
+    text-align: center;
+    margin-top: 20px;
+  }
+  #right{
+    display:none;
+    text-align: center;
+    margin-top: 20px;
+  }
+  #down{
+    display:none;
+    text-align: center;
+    margin-top: 20px;
+  }
+  #left{
+    display:none;
+    text-align: center;
+    margin-top: 20px;
+  }
+
+@media screen and (max-width: 700px) {
+   #up{
+     display:block;
+   }
+   #right{
+    display:block;
+   }
+   #down{
+    display:block;
+   }
+   #left{
+    display:block;
+   }
+}
