--- a/images/style.css
+++ b/images/style.css
@@ -3,6 +3,10 @@ body{
   
 }
 
+#container{
+  position:relative
+}
+
 
 #canvas1{
    border: 2px solid black;
@@ -85,39 +89,29 @@ body{
     display:flex;
     align-content:center;
     justify-content: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    margin-bottom: 100px;
   }
 
   #up{
     display:none;
     text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 0px;
-  
-  }
+    }
   #right{
     display:none;
     text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 0px;
-   
-  }
+    }
   #down{
     display:none;
     text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 0px;
-  
-  }
+   }
   #left{
     display:none;
     text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 0px;
-    
   }
 
 @media screen and (max-width: 700px) {
@@ -136,5 +130,12 @@ body{
    }
    #left{
     display:block;
+   }
+
+}
+
+@media screen and (min-width: 400px){
+  .direction-btn-container{
+    margin-bottom: 50px;
    }
 }
