--- a/images/style.css
+++ b/images/style.css
@@ -98,23 +98,23 @@ body{
   }
 
   #up{
-    display:none;
+    
     text-align: center;
     }
   #right{
-    display:none;
+    
     text-align: center;
     }
   #down{
-    display:none;
+    
     text-align: center;
    }
   #left{
-    display:none;
+    
     text-align: center;
   }
 
-@media screen and (max-width: 700px) {
+/*@media screen and (max-width: 700px) {
    #canvas{
     height: 200%;
    }
@@ -134,7 +134,7 @@ body{
 
 }
 
-@media screen and (min-width: 400px){
+/*@media screen and (min-width: 400px){
   .direction-btn-container{
     margin-bottom: 50px;
    }
